<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Survival Guide</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="logo">NUSG Logo</string>
    <string name="splash_screen">Splash screen</string>
    
    <string name="activity_mainmenu_name">Newcastle Uni Survival Guide</string>
    <string name="activity_planner_name">Planner</string>
    <string name="activity_preacceptance_name">Pre-Acceptance</string>
    <string name="activity_essentials_name">Essentials</string>
    <string name="activity_social_name">Social</string>
    <string name="activity_student_name">Student</string>
    <string name="activity_contacts_name">Contacts</string>
    
    <string name="social_deals">Deals &amp; Specials</string>
    <string name="social_nights">Nights Out</string>
    <string name="social_predrink">Pre-Drink Picks</string>
    <string name="social_dealsU"><u>Deals &amp; Specials</u></string>
    <string name="social_nightsU"><u>Nights Out</u></string>
    <string name="social_predrinkU"><u>Pre-Drink Picks</u></string>
    <string name="add_event">Add Event</string>
    <string name="edit_event">Edit Events</string>
    
    <string name="hint">Search dictionary</string>
    
    

</resources>
