<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:screenOrientation="portrait"
    tools:context=".MainMenu" >

    <LinearLayout
        android:id="@+id/row1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/row2"
        android:layout_margin="16dp"
        android:gravity="center"
        android:orientation="horizontal" >
        
        <LinearLayout
	        android:id="@+id/studentBox"
	        android:layout_width="120dp"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
			android:layout_marginLeft="16dp"
	        android:layout_marginRight="16dp" >
	
	        <Button
	            android:id="@+id/student"
	            android:layout_width="100dp"
	            android:layout_height="100dp"
	            android:layout_gravity="center"
	            android:onClick="openStudents"
	            android:background="@drawable/student" />
	
	        <TextView
	            android:id="@+id/studentText"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:text="@string/activity_student_name" />
	        
	    </LinearLayout>
	    
        <LinearLayout
	        android:id="@+id/plannerBox"
	        android:layout_width="120dp"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:layout_marginLeft="16dp"
	        android:layout_marginRight="16dp" >
            
	        <Button
	            android:id="@+id/planner"
				android:layout_width="100dp"
	            android:layout_height="100dp"
	            android:layout_gravity="center"
	            android:onClick="openPlanner"
	            android:background="@drawable/planner" />
	
	        <TextView
	            android:id="@+id/plannerText"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:text="@string/activity_planner_name" />
	    </LinearLayout>
        
    </LinearLayout>

    
    <LinearLayout
        android:id="@+id/row2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="16dp"
        android:gravity="center" >
        
        <LinearLayout
	        android:id="@+id/preAcceptanceBox"
	        android:layout_width="120dp"
	        android:layout_height="wrap_content"
	        
	        android:orientation="vertical"
			android:layout_marginLeft="16dp"
	        android:layout_marginRight="16dp" >
	
	        <Button
	            android:id="@+id/preAcceptance"
	            android:layout_width="100dp"
	            android:layout_height="100dp"
	            android:layout_gravity="center"
	            android:onClick="openPreAcceptance"
	            android:background="@drawable/preacceptance" />
	
	        <TextView
	            android:id="@+id/preAcceptanceText"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:text="@string/activity_preacceptance_name" />
	    </LinearLayout>
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row3"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/row2"
        android:layout_margin="16dp"
        android:gravity="center" >
        
        <LinearLayout
	        android:id="@+id/essentialsBox"
	        android:layout_width="120dp"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
			android:layout_marginLeft="16dp"
	        android:layout_marginRight="16dp" >
	
	        <Button
	            android:id="@+id/essentials"
	            android:layout_width="100dp"
	            android:layout_height="100dp"
	            android:layout_gravity="center"
	            android:onClick="openEssentials"
	            android:background="@drawable/essentials" />
	
	        <TextView
	            android:id="@+id/essentialsText"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:text="@string/activity_essentials_name" />
	        
	    </LinearLayout>
	    
        <LinearLayout
	        android:id="@+id/socialBox"
	        android:layout_width="120dp"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:layout_marginLeft="16dp"
	        android:layout_marginRight="16dp" >
            
	        <Button
	            android:id="@+id/social"
				android:layout_width="100dp"
	            android:layout_height="100dp"
	            android:layout_gravity="center"
	            android:onClick="openSocial"
	            android:background="@drawable/social" />
	
	        <TextView
	            android:id="@+id/socialText"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:text="@string/activity_social_name" />
	    </LinearLayout>
        
    </LinearLayout>

</RelativeLayout>