<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="#ffffff"
        android:orientation="horizontal" 
        android:baselineAligned="false">

        <LinearLayout
            
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:onClick="clickedButton1"
            android:orientation="horizontal" 
            android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/button1container"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/button_selected"
                android:gravity="center"
                android:orientation="vertical" 
                android:baselineAligned="false">

                <TextView
                    android:id="@+id/button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/social_nightsU"
                    android:textColor="@color/colours"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:onClick="clickedButton2"
            android:orientation="horizontal" 
            android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/button2container"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/button_unselected"
                android:gravity="center"
                android:orientation="vertical" 
                android:baselineAligned="false">

                <TextView
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/social_deals"
                    android:textColor="@color/colours"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:onClick="clickedButton3"
            android:orientation="horizontal" 
            android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/button3container"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/button_unselected"
                android:gravity="center"
                android:orientation="vertical" 
                android:baselineAligned="false">

                <TextView
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/social_predrink"
                    android:textColor="@color/colours"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
